AssimpModelを使った読み込みと, SpriteAnimation, Vector4の追加

--- a/buildMac/CMakeLists.txt
+++ b/buildMac/CMakeLists.txt
@@ -21,7 +21,7 @@ link_directories("GLFW")
 link_directories("GLEW")
 link_directories("GLUT")
 link_directories("ALUT")
-
+link_directories("assimp")
 # macにはGLUTがデフォルトとで入っているのでそっちを使う
 #find_package(GLUT)
 #include_directories(${GLUT_INCLUDE_DIRS})
@@ -53,14 +53,15 @@ if(NOT OPENAL_FOUND)
 endif(NOT OPENAL_FOUND)
 
 #cppファイルをまとめて, Projetへリンク
-file(GLOB alSrc ${CMAKE_CURRENT_SOURCE_DIR}/../src/AL/*.cpp) #AL関連のファイル
+file(GLOB src ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.cpp)
+file(GLOB alSrc ${CMAKE_CURRENT_SOURCE_DIR}/../src/AL/*.cpp) #AL関連
 file(GLOB glSrc ${CMAKE_CURRENT_SOURCE_DIR}/../src/GL/*.cpp) #GL関連
-file(GLOB glUtilSrc ${CMAKE_CURRENT_SOURCE_DIR}/../src/GL/util/*.cpp)
-ADD_LIBRARY(${Project} STATIC ${glSrc} ${alSrc} ${glUtilSrc})
+file(GLOB glUtilSrc ${CMAKE_CURRENT_SOURCE_DIR}/../src/GL/util/*.cpp) #glUtil
+
+ADD_LIBRARY(${Project} SHARED ${src} ${glSrc} ${alSrc} ${glUtilSrc})
 
 # TODO OpenGLとかを, django一つにまとめられない => DLLをスタティックにリンクしてない???
-TARGET_LINK_LIBRARIES(${Project} glut glfw3 GLEW ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} alut ${OPENAL_LIBRARY} m)
+TARGET_LINK_LIBRARIES(${Project} glut glfw3 GLEW ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} alut ${OPENAL_LIBRARY} assimp.3.0.255 m)
 
-install(TARGETS ${Project} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
-
-
+#install(TARGETS ${Project} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
+install(TARGETS ${Project} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../test/ActionGameTest)
