--- a/test/ActionGameTest/CMakeLists.txt
+++ b/test/ActionGameTest/CMakeLists.txt
@@ -18,6 +18,7 @@ link_directories(~/git/DBDG/buildmac/GLUT)
 link_directories(~/git/DBDG/buildmac/GLFW)
 link_directories(~/git/DBDG/buildmac/GLEW)
 link_directories(~/git/DBDG/buildmac/ALUT)
+link_directories(~/git/DBDG/buildmac/assimp)
 
 #About GLUT
 #find_package(GLUT)
@@ -56,6 +57,7 @@ link_directories(~/git/DBDG/lib)
 add_executable(${Project} ${srcFile})
 target_link_libraries(${Project} ${OPENGL_gl_LIBRARY} glut glfw3 glew m)
 target_link_libraries(${Project} alut ${OPENAL_LIBRARY})
+target_link_libraries(${Project} assimp.3.0.255)
 target_link_libraries(${Project} django)
 
 
