--- a/test/ActionGameTest/CMakeLists.txt
+++ b/test/ActionGameTest/CMakeLists.txt
@@ -5,12 +5,12 @@ cmake_minimum_required(VERSION 2.8)
 set(Project testGame)
 
 PROJECT(${Project})
-file(GLOB srcFile ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+file(GLOB srcFile ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
 #c++0x対応オプション
 set(CMAKE_CXX_FLAGS_RELEASE "-Wall -pedantic -O2")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG")
-set(CMAKE_CXX_FLAGS "-std=c++0x")
+set(CMAKE_CXX_FLAGS "-std=c++11")
 
 set(CMAKE_BUILD_TYPE release)
 
@@ -20,15 +20,6 @@ link_directories(~/git/DBDG/buildmac/GLEW)
 link_directories(~/git/DBDG/buildmac/ALUT)
 link_directories(~/git/DBDG/buildmac/assimp)
 
-#About GLUT
-#find_package(GLUT)
-#include_directories(${GLUT_INCLUDE_DIRS})
-#link_directories(${GLUT_LIBRARY_DIRS})
-#if(NOT GLUT_FOUND)
-#       message(ERROR " GLUT not found!")
-#endif(NOT GLUT_FOUND)
-
-#aboud OpenGL
 find_package(OPENGL)
 include_directories(${OPENGL_INCLUDE_DIRS})
 link_directories(${OPENGL_LIBRARY_DIRS})
@@ -36,20 +27,12 @@ if(NOT OPENGL_FOUND)
     message(ERROR " OPENGL not found!")
 endif(NOT OPENGL_FOUND)
 
-#find_package(GLEW)
-#link_directories(${GLEW_LIBRARY_DIRS})
-
-#find_package(GLFW)
-#link_directories(${GLFW_LIBRARY_DIRS})
-
 find_package(OPENAL)
 include_directories(${OPENAL_INCLUDE_DIRS})
 link_directories(${OPENAL_LIBRARY_DIRS})
 if(NOT OPENAL_FOUND)
     message(ERROR " OPENAL not found!")
 endif(NOT OPENAL_FOUND)
-
-#link_directories(/usr/local/opt/freealut/lib)
 
 include_directories(~/git/DBDG/include)
 link_directories(~/git/DBDG/lib)
